# aeris

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  flake.nix  onelf.toml
.github/workflows/: nightly.yaml  release-plz.yml  release.yaml
src/: app.rs  config.rs  main.rs  styles.rs  theme.rs
src/adapters/: mod.rs  soar.rs
src/adapters/wasm/: abi.rs  adapter.rs  host.rs  host_functions.rs  manifest.rs  memory.rs  mod.rs
src/app/: message.rs
src/components/: text_input.rs
src/core/: adapter.rs  adapter_manager.rs  capabilities.rs  config.rs  mod.rs  package.rs  privilege.rs  profile.rs  registry.rs  repository.rs
src/views/: adapter_info.rs  browse.rs  dashboard.rs  installed.rs  manifest.rs  mod.rs  repositories.rs  settings.rs  updates.rs
