[package]
name = "aeris"
version = "0.0.0"
edition = "2024"
description = "Unbounded package management"
license = "MIT"

[features]
debug = ["iced/hot"]

[dependencies]
async-trait = "0.1.89"
env_logger = "0.11.8"
iced = { version = "0.14.0", default-features = false, features = [
  "lazy",
  "linux-theme-detection",
  "tiny-skia",
  "tokio",
  "wayland",
  "wgpu",
  "x11",
] }
log = "0.4.29"
rfd = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
soar-config = { git = "https://github.com/pkgforge/soar" }
soar-core = { git = "https://github.com/pkgforge/soar" }
soar-events = { git = "https://github.com/pkgforge/soar" }
soar-operations = { git = "https://github.com/pkgforge/soar" }
soar-utils = { git = "https://github.com/pkgforge/soar" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["sync", "fs"] }
toml = "1.0.1"
toml_edit = "0.25.1"
shellexpand = "3.0"
ureq = { version = "3.2.0", features = ["json"] }
wasmtime = { version = "41", default-features = false, features = ["cranelift", "runtime"] }
which = "7.0"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
