[package]
name = "aeris"
version = "0.1.0"
edition = "2024"
description = "Unbounded package management"
license = "MIT"
repository = "https://github.com/pkgforge/aeris"
readme = "README.md"
keywords = ["package-manager", "gui", "soar", "linux"]
categories = ["gui"]

[dependencies]
async-trait = "0.1.89"
env_logger = "0.11.8"
gpui = "0.2"
log = "0.4.29"
rfd = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"
soar-config = "0.10.0"
soar-core = "0.16.3"
soar-events = "0.1.0"
soar-operations = "0.3.1"
soar-utils = "0.4.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["sync", "fs", "rt-multi-thread"] }
unicode-segmentation = "1.12"
toml = "1.0.1"
toml_edit = "0.25.1"
shellexpand = "3.0"
ureq = { version = "3.2.0", features = ["json"] }
wasmtime = { version = "46", default-features = false, features = ["cranelift", "runtime"] }
which = "7.0"
notify = "8.2.0"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
